# lilq

./: .gitignore  REUSE.toml  devbox.json  devbox.json.license  pyproject.toml
lilq/: __init__.py  query.py  transformation.py
tests/: test_q.py
