[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microq"
version = "0.0.1"
description = "Minimal implementation of a query builder (inspired by Django's Q objects)"
authors = [
  {name = "Maximilian Albert", email = "maximilian.albert@gmail.com"},
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipython",
    "jupyterlab",
    "pytest",
]
